--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "4.3.1"
+    "react-dom": "17.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
